[fix] z-index fotoer contacts

--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -12,6 +12,7 @@
 }
 
 .footer-top__contacts {
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   gap: 5px;
